--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ise-api",
+  "name": "learn-nest-js",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -22,26 +22,60 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^1.1.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-socket.io": "^8.2.4",
+    "@nestjs/swagger": "^5.1.5",
+    "@nestjs/typeorm": "^8.0.3",
+    "@nestjs/websockets": "^8.2.3",
+    "@sendgrid/mail": "^7.6.0",
+    "@socket.io/redis-adapter": "^7.1.0",
+    "@types/faker": "^5.5.9",
+    "bcryptjs": "^2.4.3",
+    "cache-manager": "^3.6.0",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
+    "cloudinary": "^1.27.1",
+    "compression": "^1.7.4",
+    "faker": "^5.5.3",
+    "mysql2": "^2.3.3",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "pg": "^8.7.1",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.1.6",
+    "typeorm": "^0.2.40",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
+    "@nestjs/testing": "^5.7.4",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cache-manager": "^3.4.2",
+    "@types/cache-manager-redis-store": "^2.0.1",
+    "@types/compression": "^1.7.2",
     "@types/express": "^4.17.13",
-    "@types/jest": "27.0.2",
+    "@types/jest": "^27.0.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
+    "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "i": "^0.3.7",
     "jest": "^27.2.5",
+    "npm": "^8.3.0",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
