fix env example

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 DB_PORT=5432
 
 DB_USER=postgres
-DB_PASSWORD=my_password
+DB_PASSWORD=saota1278
 
-DB_DATABASE=my_database
+DB_DATABASE=isekai-social
 
 JWT_SECRET_KEY=secret
 JWT_ACCESS_EXPIRATION=60 minutes
