--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,17 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name _;
+    server_name isekai-api.me www.isekai-api.me;
+
+    server_tokens off;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    # location / {
+    #     return 301 https://example.org$request_uri;
+    # }
 
     location /api {
         proxy_pass http://api:8080;
