--- a/nginx.conf
+++ b/nginx.conf
@@ -18,3 +18,17 @@ server {
         proxy_pass http://api:8080;
     }
 }
+
+server {
+    listen 443 default_server ssl http2;
+    listen [::]:443 ssl http2;
+
+    server_name isekai-api.me www.isekai-api.me;
+
+    ssl_certificate /etc/nginx/ssl/live/isekai-api.me/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/isekai-api.me/privkey.pem;
+    
+    location /api {
+        proxy_pass http://api:8080;
+    }
+}
