--- a/nginx.conf
+++ b/nginx.conf
@@ -10,13 +10,10 @@ server {
         root /var/www/certbot;
     }
 
-    # location / {
-    #     return 301 https://example.org$request_uri;
-    # }
-
-    location /api {
-        proxy_pass http://api:8080;
+    location / {
+        return 301 https://isekai-api.me$request_uri;
     }
+
 }
 
 server {
