--- a/nginx.conf
+++ b/nginx.conf
@@ -26,5 +26,9 @@ server {
     
     location /api {
         proxy_pass http://api:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $host;
     }
 }
