--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "compression": "^1.7.4",
     "faker": "^5.5.3",
     "mysql2": "^2.3.3",
+    "nest-winston": "^1.6.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^8.7.1",
@@ -52,6 +53,7 @@
     "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.1.6",
     "typeorm": "^0.2.40",
+    "winston": "^3.4.0",
     "zlib": "^1.0.5"
   },
   "devDependencies": {
