--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "compression": "^1.7.4",
     "faker": "^5.5.3",
     "mysql2": "^2.3.3",
+    "nanoid": "^3.2.0",
     "nest-winston": "^1.6.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
