--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - .env
     environment:
       DB_HOST: database
+      NODE_ENV: production
     networks:
       - app-network
 
