--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,9 +16,10 @@ services:
     environment:
       DB_HOST: database
       NODE_ENV: production
+    ports:
+      - 8080:8080
     networks:
       - app-network
-
   proxy:
     image: nginx:alpine
     container_name: isekai-proxy
