--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 image: ubuntu:latest
 stages:
   - deploy
+  - deploy-production
 before_script:
   - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
   - eval $(ssh-agent -s)
@@ -11,9 +12,18 @@ before_script:
 deploy:
   stage: deploy
   environment:
+    name: development
+  script:
+    - ssh root@$SSH_HOST_IP "cd ise-api; git pull; docker-compose restart"
+  only:
+    - dev
+
+deploy-production:
+  stage: deploy
+  environment:
     name: production
   script:
     - ssh root@$SSH_HOST_IP "cd ise-api; git pull; docker-compose down; docker-compose up --build -d"
-  # only:
-  #   - main
-  # when: manual
+  only:
+    - main
+  when: manual
