--- a/package.json
+++ b/package.json
@@ -22,16 +22,16 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.2.6",
-    "@nestjs/config": "^1.1.0",
-    "@nestjs/core": "^8.0.0",
+    "@nestjs/config": "^1.1.7",
+    "@nestjs/core": "^8.2.6",
     "@nestjs/jwt": "^8.0.0",
-    "@nestjs/mapped-types": "*",
-    "@nestjs/passport": "^8.0.1",
-    "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/platform-socket.io": "^8.2.4",
-    "@nestjs/swagger": "^5.1.5",
+    "@nestjs/mapped-types": "^1.0.1",
+    "@nestjs/passport": "^8.1.0",
+    "@nestjs/platform-express": "^8.2.6",
+    "@nestjs/platform-socket.io": "^8.2.6",
+    "@nestjs/swagger": "^5.2.0",
     "@nestjs/typeorm": "^8.0.3",
-    "@nestjs/websockets": "^8.2.3",
+    "@nestjs/websockets": "^8.2.6",
     "@sendgrid/mail": "^7.6.0",
     "@socket.io/redis-adapter": "^7.1.0",
     "@types/faker": "^5.5.9",
@@ -61,7 +61,7 @@
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^5.7.4",
+    "@nestjs/testing": "^8.2.6",
     "@types/bcryptjs": "^2.4.2",
     "@types/cache-manager": "^3.4.2",
     "@types/cache-manager-redis-store": "^2.0.1",
@@ -92,6 +92,9 @@
     "typescript": "^4.3.5"
   },
   "jest": {
+    "moduleNameMapper": {
+      "^src/(.*)$": "<rootDir>/$1"
+    },
     "moduleFileExtensions": [
       "js",
       "json",
