--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cloudinary": "^1.27.1",
     "compression": "^1.7.4",
     "faker": "^5.5.3",
+    "google-auth-library": "^7.14.0",
     "mysql2": "^2.3.3",
     "nanoid": "^3.2.0",
     "nest-winston": "^1.6.2",
