--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,12 +14,10 @@ services:
     env_file:
       - .env
     environment:
-      DB_HOST: database
+      DB_HOST: 159.223.67.126
       NODE_ENV: production
     ports:
       - 8080:8080
-    networks:
-      - app-network
   proxy:
     image: nginx:alpine
     container_name: isekai-proxy
@@ -33,8 +31,6 @@ services:
       - 443:443
     depends_on:
       - api
-    networks:
-      - app-network
 
   certbot:
     image: certbot/certbot
@@ -44,26 +40,3 @@ services:
       - ./certbot/conf/:/etc/letsencrypt/:rw
     depends_on:
       - proxy
-    networks:
-      - app-network
-  database:
-    image: postgres:9.4
-    container_name: database
-    restart: always
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=saota1278
-      - POSTGRES_DB=isekai-social
-    ports:
-      - '5432:5432'
-    networks:
-      - app-network
-    volumes:
-      - db:/var/lib/postgresql/data
-
-networks:
-  app-network:
-    driver: bridge
-volumes:
-  db:
-    driver: local
